--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -46,3 +46,9 @@ commands:
   combat:
     description: Check your combat status and information
     usage: /combat [status|help]
+  admin:
+    description: Opens the admin menu (admin only)
+    usage: /admin
+  mod:
+    description: Opens the moderator menu (mod only)
+    usage: /mod
